# django-crm-app

./: .gitignore  pyproject.toml
accounts/: decorators.py  filters.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_order_product.py  0003_tag_order_customer_order_product_product_tags.py  0004_alter_order_customer_alter_order_product.py  0005_order_note.py  0006_customer_user.py  0007_customer_profile_pic.py
crm/: settings.py  urls.py
templates/accounts/: account_settings.html  customers.html  dashboard.html  delete_order.html  main.html  navbar.html  order_form.html  products.html  register.html  status.html  user_page.html
