[project]
name = "crm"
version = "0.1.0"
description = ""
authors = [
    {name = "kevxpingu",email = "kevdasah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "crm"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
